ansible/playbook/proxmox/roles/k8s-master/ingress-apps.yml
apiVersion: v1
kind: Namespace
metadata:
  name: alomerry
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alomerry-ingress
  namespace: alomerry
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-logging: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: ci.alomerry.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-service
            port:
              number: 80
